Fixed right-click menu on title-wrap

--- a/theme.css
+++ b/theme.css
@@ -2214,7 +2214,7 @@ div.platform-win .user-settings-modal .tab-bar.SIDE .tab-bar-item:nth-of-type(14
     opacity: 1
 }
 .chat .title-wrap {
-    z-index: 10000!important;
+    z-index: 2!important;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
